--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
 body {
+  background-color: gray;
   margin: 0px;
+}
+header {
+  background-color: black;
+}
+.header_text {
+  color: white;
+}
+.head {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 header {
   height: 50px;
@@ -10,6 +20,46 @@ header {
   align-items: center;
 }
 .text {
+  font-size: 35px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.box {
+  padding-top: 15px;
+}
+.form_box {
+  /* width: 200px; */
+  /* border: 1px solid black; */
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.textbox {
+  padding: 20px 0px;
+}
+.email_text_box {
+  padding-bottom: 15px;
+}
+.btn {
+  font-size: 25px;
+}
+.botton {
+  border: 2px solid red;
+  border-radius: 5px;
+  background-color: aqua;
+}
+.footer {
+  height: 600px;
+}
+.fotter_area {
+  background-color: white;
+  margin-top: 400px;
+  display: flex;
+  justify-content: space-around;
+}
+.footer_text {
+  color: black;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 25px;
 }
