--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ header {
 .header_text {
   color: white;
 }
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .head {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
@@ -27,10 +32,20 @@ header {
 .box {
   padding-top: 15px;
 }
+.email_text_box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .form_box {
-  /* width: 200px; */
-  /* border: 1px solid black; */
-  padding: 20px;
+  margin-top: 100px;
+  width: 450px;
+  height: 350px;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: white;
+  /* padding: 20px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,6 +56,12 @@ header {
 .email_text_box {
   padding-bottom: 15px;
 }
+.submit_botton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .btn {
   font-size: 25px;
 }
@@ -52,9 +73,16 @@ header {
 .footer {
   height: 600px;
 }
-.fotter_area {
+.footer_area {
+  height: 50px;
+  border: 1px solid black;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   background-color: white;
-  margin-top: 400px;
+  margin-top: 385px;
   display: flex;
   justify-content: space-around;
 }
