--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
-  background-color: gray;
-  background-image: url("../css/20250517_094113.jpg");
+  background-image: url("../20250517_094113.jpg");
   background-repeat: no-repeat;
   background-size: 1600 px;
  
